--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
+<app-header [title]="appTitle"></app-header>
 <main class="main">
   <router-outlet />
 </main>
+<app-footer></app-footer>
+
+
 
 
 
