--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -1,9 +1,9 @@
 <div [@slideDownAnimation]="isOpen ? 'open' : 'closed'" class="search-bar">
   <mat-form-field appearance="fill" class="form-input">
     <mat-icon matIconPrefix>search</mat-icon>
-    <input type="text" matInput placeholder="Find movies, TV Shows and people...">
+    <input type="text" matInput placeholder="Find movies, TV Shows and people..." [formControl]="search" #searchInput>
   </mat-form-field>
-  <button mat-icon-button color="warn" (click)="toggle.emit()" class="close-button">
+  <button mat-icon-button type="button" color="warn" (click)="toggle()" class="close-button">
     <mat-icon>close</mat-icon>
   </button>
 </div>
