--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  color-scheme: dark;
 }
 
 .app-layout, .main {
@@ -16,6 +17,7 @@
 
 .main {
   z-index: 50;
+  padding: 1rem;
 }
 
 
