--- a/src/app/components/media-card/media-card.component.html
+++ b/src/app/components/media-card/media-card.component.html
@@ -1,5 +1,7 @@
-<mat-card>
-  <mat-card-content>
-    <p>{{ data.title }}</p>
+<mat-card class="media-card" [matTooltip]="data.title" [matTooltipShowDelay]="1000">
+  <img mat-card-image [src]="data.imageUri" alt="Poster" class="media-card__image">
+  <mat-card-content class="media-card__content">
+    <mat-card-title class="media-card__title">{{ data.title }}</mat-card-title>
+    <span class="media-card__type" [class]="bgColorClass()">{{ data.mediaType | uppercase }}</span>
   </mat-card-content>
 </mat-card>
