ADD carousel-media module, components and api service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,11 +11,15 @@
     <app-search-bar #searchBar></app-search-bar>
     <app-header (sideNavToggle)="mainDrawer.toggle()" (searchBarToggle)="searchBar.toggle()"></app-header>
     <main class="main">
-      <div>
-        @for (media of trending; track media.id) {
-          <app-media-card [data]="media.getMediaCardData()"></app-media-card>
-        }
-      </div>
+      <app-carousel>
+        <app-carousel-header title="Trending" titleAccent="today" contentLink="#"/>
+            @for (media of trending; track media.id) {
+              <app-carousel-item>
+                <app-media-card [data]="media.getMediaCardData()"></app-media-card>
+              </app-carousel-item>
+            }
+        </app-carousel>
+
         <router-outlet />
     </main>
     <app-footer></app-footer>
