--- a/src/app/modules/media-carousel/components/carousel/carousel.component.scss
+++ b/src/app/modules/media-carousel/components/carousel/carousel.component.scss
@@ -1,7 +1,6 @@
 @use '../../../../../variables.scss';
 
 .carousel {
-  position: relative;
   padding: 0 2.5rem;
   &__list {
     display: flex;
@@ -10,6 +9,7 @@
     scroll-behavior: smooth;
     padding: 0 0 1rem;
     list-style: none;
+    scroll-snap-type: x mandatory;
     @extend .app-scrollbar--alt !optional;
     &--empty {
       height: 5rem;
@@ -20,24 +20,39 @@
         opacity: 0.8;
       }
     }
-    &:hover {
-      @extend .app-scrollbar--alt-hover !optional;
-    }
   }
   &__item {
     padding: 0;
     list-style: none;
+    scroll-snap-align: start;
   }
 
   .slide-button {
     position: absolute;
-    top: 45%;
+    top: 40%;
     z-index: 50;
     &--left {
-      left: -10px;
+      left: -45px;
     }
     &--right {
-      right: -10px;
+      right: -45px;
+    }
+  }
+}
+
+.carousel__body {
+  position: relative;
+}
+
+
+.disabled {
+  scrollbar-width: none;
+  .carousel__list {
+    &::-webkit-scrollbar-thumb {
+      background-color: transparent;
+    }
+    &::-webkit-scrollbar-track {
+      background-color: transparent;
     }
   }
 }
