--- a/src/variables.scss
+++ b/src/variables.scss
@@ -55,30 +55,21 @@
 
 .app-scrollbar--alt {
   &::-webkit-scrollbar {
-    height: 0.75rem;
-  }
-  &::-webkit-scrollbar-thumb {
-    background-color: transparent;
-  }
-  &::-webkit-scrollbar-track {
-    background-color: transparent;
-  }
-  &::-webkit-scrollbar-thumb {
-    border-radius: 1rem;
-  }
-}
-
-.app-scrollbar--alt-hover {
-  &::-webkit-scrollbar {
     width: 0.3125rem;
   }
   &::-webkit-scrollbar-thumb {
-    background-color: rgba(70, 70, 70, 0.6);
+    background-color: rgba(80, 80, 80, 0.6);
+    border-radius: 1rem;
     &:hover {
-      background-color: rgba(80, 80, 80, 0.6);
+      background-color: rgba(90, 90, 90, 0.6);
     }
     &:active {
-      background-color: rgba(90, 90, 90, 0.7);
+      background-color: rgba(100, 100, 100, 0.7);
     }
   }
+}
+
+.container {
+  max-width: 1440px;
+  margin: 0 auto;
 }
