--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,5 +1,6 @@
-/* :host {
-} */
+:host {
+  padding: 1rem;
+}
 .media-type-toggle, .time-window-toggle {
   border-radius: 2rem;
 }
@@ -10,4 +11,9 @@
 
 .time-window-toggle {
   --mat-standard-button-toggle-selected-state-background-color: var(--info-color);
+}
+
+.card-link {
+  text-decoration: none;
+  color: inherit;
 }
