--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-drawer-container class="app-layout" autosize>
+<mat-drawer-container class="app-layout">
   <mat-drawer #mainDrawer class="main-sidenav" mode="over">
     <div class="main-sidenav__header">
       <button type="button" mat-icon-button color="warn" class="close-button" (click)="mainDrawer.toggle()">
