--- a/src/app/pages/media-details/media-info/media-info.component.scss
+++ b/src/app/pages/media-details/media-info/media-info.component.scss
@@ -1,47 +1,77 @@
 .poster {
-  width: 100%;
+  position: relative;
+  &_img {
+    width: 100%;
+    z-index: 10;
+    border-radius: 1rem;
+  }
 }
 .info {
   border-radius: 1rem;
-  transform: translateY(-1rem);
+  transform: translateY(-2rem);
   background-color: var(--main-color);
   z-index: 90;
-  padding: .5rem;
-  /* &__header {
-    padding: 1rem 0;
-    display: grid;
-    grid-template-areas:
-      'title rating'
-      'type release'
-      'trailer trailer'
-      'tagline tagline';
-    grid-template-columns: 1fr auto;
-  }
-  &__title {
-    grid-area: title;
-  }
-  &__rating {
-    grid-area: rating;
-  }
-  &__trailer-link {
-    grid-area: trailer;
-  }
-  &__release {
-    grid-area: release;
-  }
-  &__type {
-    grid-area: type;
-  }
-  &__tagline {
-    grid-area: tagline;
-  } */
+  padding: 2rem 1rem;
   &__header-top {
     display: flex;
-    align-items: center;
+    align-items: baseline;
     gap: 1rem;
     justify-content: space-between;
   }
   &__title {
     margin: 0;
+    font-weight: bold;
+    margin-bottom: 1.5rem;
+  }
+  &__title, .rating {
+    font-size: 1.5rem;
+  }
+  .rating {
+    display: flex;
+    align-items: end;
+    gap: 3px;
+    &__icon {
+      color: var(--accent-color);
+    }
+  }
+
+  &__type {
+    margin-right: 1rem;
+  }
+
+  .trailer-button {
+    margin-top: 1.5rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    display: inline-flex;
+    align-items: center;
+    padding: .5rem 1rem;
+    border-radius: .5rem;
+    background-color: rgba(var(--success-color-value), 0.5);
+    font-size: 1rem;
+    color: #FFF;
+    border: none;
+  }
+  &__tagline {
+    opacity: .8;
+    display: block;
+    margin: 1.5rem 0;
+  }
+
+  &__footer {
+    margin-top: 2rem;
+    .genres {
+      display: flex;
+      flex-wrap: wrap;
+      gap: .8rem;
+      &__link {
+        padding: .5rem 1rem;
+        border-radius: .5rem;
+        font-weight: bold;
+        text-decoration: none;
+        background-color: transparent;
+        background-image: var(--primary-gradient);
+      }
+    }
   }
 }
