--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,9 +15,13 @@
   color: var(--text-color);
 }
 
+.mat-drawer-content {
+  max-width: 100%;
+}
+
 .main {
   z-index: 50;
-  padding: 1rem;
+  // padding: 1rem;
 }
 
 
