--- a/src/app/pages/media-details/media-details.component.scss
+++ b/src/app/pages/media-details/media-details.component.scss
@@ -1,17 +1,29 @@
 .details {
   position: relative;
+  overflow-x: hidden;
 }
 .backdrop {
-  width: calc(100% + 2rem);
   position: absolute;
   background-image:
   linear-gradient(to bottom, transparent 80%, var(--main-color) 100%),
   var(--backdrop-url);
   background-repeat: no-repeat;
   background-position: center;
+  background-size: cover;
   filter: opacity(0.20);
   width: 100vw;
   height: 700px;
-  top: -1rem;
-  left: -1rem;
+}
+
+.backdrop-placeholder {
+  position: absolute;
+  background-image: linear-gradient(
+    to bottom,
+    var(--info-color) 0%,
+    var(--primary-color) 75%,
+    var(--main-color) 100%
+  );
+  opacity: 0.2;
+  width: 100vw;
+  height: 700px;
 }
