--- a/src/app/pages/media-details/media-info/media-info.component.scss
+++ b/src/app/pages/media-details/media-info/media-info.component.scss
@@ -1,9 +1,21 @@
 .poster {
   position: relative;
-  &_img {
+  border-radius: 1rem;
+  overflow: hidden;
+  &__img {
     width: 100%;
     z-index: 10;
-    border-radius: 1rem;
+  }
+  &-placeholder {
+    width: 100%;
+    height: 570px;
+    display: grid;
+    place-items: center;
+    background-color: var(--bg-image-alt);
+    &__icon  {
+      transform: scale(10);
+      opacity: .5;
+    }
   }
 }
 .info {
