--- a/src/app/pages/media-details/media-gallery/media-gallery.component.scss
+++ b/src/app/pages/media-details/media-gallery/media-gallery.component.scss
@@ -5,3 +5,10 @@
 .type-selector {
   --mat-standard-button-toggle-selected-state-background-color: var(--primary-color);
 }
+
+.gallery-item {
+  &__image {
+    border-radius: .25rem;
+    height: 250px;
+  }
+}
