--- a/src/app/pages/media-details/media-details.component.html
+++ b/src/app/pages/media-details/media-details.component.html
@@ -24,5 +24,5 @@
     }
   </app-carousel>
 
-  <app-media-gallery [mediaId]="id" [mediaType]="mediaType"/>
+  <app-media-gallery [mediaId]="id" [mediaType]="mediaType" class="gallery"/>
 </section>
