--- a/src/app/pages/media-details/media-info/media-info.component.scss
+++ b/src/app/pages/media-details/media-info/media-info.component.scss
@@ -18,12 +18,13 @@
     }
   }
 }
+
 .info {
   border-radius: 1rem;
   transform: translateY(-2rem);
   background-color: var(--main-color);
   z-index: 90;
-  padding: 2rem 1rem;
+  padding: 2rem;
   &__header-top {
     display: flex;
     align-items: baseline;
@@ -84,6 +85,27 @@
         background-color: transparent;
         background-image: var(--primary-gradient);
       }
+    }
+  }
+}
+
+
+@media screen and (min-width: 960px) {
+  .container {
+    display: grid;
+    grid-template-columns: auto auto;
+    align-items: center;
+    gap: 1rem;
+  }
+  .info {
+    transform: translateY(0);
+    margin: 0 auto;
+    background-color: rgba(var(--main-color-value), .5);
+    backdrop-filter: blur(.4rem);
+  }
+  .poster {
+    &__img {
+
     }
   }
 }
