--- a/src/app/components/skeleton/skeleton.component.scss
+++ b/src/app/components/skeleton/skeleton.component.scss
@@ -23,3 +23,15 @@
     background-color: rgba(var(--text-color-value), 0.1);
   }
 }
+
+/* @keyframes pulse {
+  0% {
+    background-color: rgba(var(--text-color-value), 1);
+  }
+  50% {
+    background-color: rgba(var(--text-color-value), 1);
+  }
+  100% {
+    background-color: rgba(var(--text-color-value), 1);
+  }
+} */
