--- a/src/app/pages/media-details/media-gallery/media-gallery.component.html
+++ b/src/app/pages/media-details/media-gallery/media-gallery.component.html
@@ -19,7 +19,7 @@
       </app-carousel-item>
     } @else {
       @if (selectedGalleryType === 'backdrop') {
-        @for (resource of backdrops; track resource.filePath) {
+        @for (resource of backdrops.slice(0, 20); track resource.filePath) {
           <app-carousel-item>
             <div class="gallery-item">
               <img [src]="getImageUri(resource.filePath, 500)" alt="image" class="gallery-item__image" (click)="openImageViewer(resource.filePath)">
@@ -28,7 +28,7 @@
         }
       }
       @else if (selectedGalleryType === 'poster') {
-        @for (resource of posters; track resource.filePath) {
+        @for (resource of posters.slice(0, 20); track resource.filePath) {
           <app-carousel-item class="gallery-item">
             <div class="gallery-item">
               <img [src]="getImageUri(resource.filePath)" alt="image" class="gallery-item__image" (click)="openImageViewer(resource.filePath)">
@@ -37,9 +37,9 @@
         }
       }
       @else if (selectedGalleryType === 'video') {
-        @for (resource of videos; track resource.id) {
+        @for (resource of videos.slice(0, 20); track resource.id) {
           <app-carousel-item>
-            <div class="gallery-item gallery-item--video">
+            <div class="gallery-item gallery-item--video" (click)="openVideoViewer(resource.key, resource.name)">
               <div [ngStyle]="{'--thumbnail-url': 'url(' + getImageUri(resource.key) + ')'}" class="gallery-item__thumbnail">
                 <div class="gallery-item__icon">
                   <mat-icon>play_arrow</mat-icon>
