--- a/src/app/pages/media-details/media-info/media-info.component.scss
+++ b/src/app/pages/media-details/media-info/media-info.component.scss
@@ -1,6 +1,5 @@
 .poster {
   position: relative;
-  border-radius: 1rem;
   overflow: hidden;
   max-width: 100%;
   @media screen and (min-width: 960px) {
@@ -8,15 +7,20 @@
     height: 450px;
   }
   &__img {
+    border-radius: .5rem;
     width: 100%;
     object-fit: contain;
   }
   &-placeholder {
     width: 100%;
     height: 570px;
+    border-radius: .5rem;
     display: grid;
     place-items: center;
     background-color: var(--bg-image-alt);
+    @media screen and (min-width: 960px) {
+      height: 450px;
+    }
     &__icon  {
       transform: scale(10);
       opacity: .5;
@@ -25,11 +29,11 @@
 }
 
 .info {
-  border-radius: 1rem;
+  border-radius: .5rem;
   transform: translateY(-2rem);
   background-color: var(--main-color);
   z-index: 90;
-  padding: 2rem;
+  padding: 1.5rem 1rem;
   &__header-top {
     display: flex;
     align-items: baseline;
