ADD search page, basic search ui

--- a/src/app/components/search-bar/search-bar.component.scss
+++ b/src/app/components/search-bar/search-bar.component.scss
@@ -4,7 +4,7 @@
   display: grid;
   grid-template-columns: 1fr minmax(200px, 800px) auto 1fr;
   gap: 1rem;
-  padding-top: .5rem;
+  padding: .5rem 0;
   position: fixed;
   z-index: 200;
 }
