--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -1,5 +1,5 @@
 <div [@slideDownAnimation]="isOpen ? 'open' : 'closed'" class="search-bar">
-  <mat-form-field appearance="fill" class="form-input">
+  <mat-form-field appearance="outline" class="form-input" [subscriptSizing]="'dynamic'" (input)="goToSearch()">
     <mat-icon matIconPrefix>search</mat-icon>
     <input type="text" matInput placeholder="Find movies, TV Shows and people..." [formControl]="search" #searchInput>
   </mat-form-field>
