--- a/src/app/pages/media-search/media-search.component.html
+++ b/src/app/pages/media-search/media-search.component.html
@@ -1,21 +1,28 @@
 <section class="media-search">
-  <!-- <mat-tab-group>
-    <mat-tab label="First">
-      @if (loading) {
-          <app-card-skeleton *appRepeat="8"/>
-      } @else {
-        @for (media of movies; track media.id) {
-          <a [routerLink]="[ '/' + popularMediaType, media.id]" class="card-link">
-            <app-media-card [data]="media.getMediaCardData()"></app-media-card>
-          </a>
-        }
-    </mat-tab>
-    <mat-tab label="Second">
-
-    </mat-tab>
-    <mat-tab label="Third">
-
-    </mat-tab>
-  </mat-tab-group> -->
+  <div class="container">
+    <header  class="media-search__header">
+      <h2 class="media-search__title">Results for: {{ searchQuery }}</h2>
+    </header>
+    @if (loading) {
+      <mat-spinner [diameter]="100" class="loader"></mat-spinner>
+    } @else {
+      <mat-tab-group animationuration="300ms" mat-stretch-tabs="false" mat-align-tabs="center" [selectedIndex]="selectedMediaTypeIndex">
+        <mat-tab [label]="movieTabLabel">
+          @for (media of movies; track media.id) {
+            <a [routerLink]="[ '/' + 'movie', media.id]" class="card-link">
+              <p>{{ media.title }}</p>
+            </a>
+          }
+        </mat-tab>
+        <mat-tab [label]="tvTabLabel">
+          @for (media of tvseries; track media.id) {
+            <a [routerLink]="[ '/' + 'tv', media.id]" class="card-link">
+              <p>{{ media.name}}</p>
+            </a>
+          }
+        </mat-tab>
+      </mat-tab-group>
+    }
+  </div>
 </section>
 
